Adding resources used in the application.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
+    <color name="tag_line_color">#FF3466</color>
+    <color name="review_color">#6D6D80</color>
+    <color name="story_line_color">#ECECEC</color>
+    <color name="shadow_color">#80000000</color>
+    <color name="artist_color">#D8D8D8</color>
 </resources>
