--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,114 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="button_back_style">
-        <item name="android:textColor">
-            @color/white
-        </item>
-        <item name="android:textAppearance">
-            @style/Theme.AppCompat.Light
-        </item>
-        <item name="android:textSize">
-            12sp
-        </item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="pg_style">
-        <item name="android:textSize">
-            12sp
-        </item>
-        <item name="android:textColor">
-            @color/white
-        </item>
-        <item name="android:textStyle">
-            bold
-        </item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="name_style">
-        <item name="android:textSize">
-            40sp
-        </item>
-        <item name="android:letterSpacing">
-            -0.01
-        </item>
-        <item name="android:lineSpacingMultiplier">
-            0.9
-        </item>
-        <item name="android:textColor">
-            #ECECEC
-        </item>
-        <item name="android:shadowColor">
-            @color/shadow_color
-        </item>
-        <item name="android:shadowDx">
-            0
-        </item>
-        <item name="android:shadowDy">
-            6
-        </item>
-        <item name="android:shadowRadius">
-            12
-        </item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:letterSpacing">-0.01</item>
+        <item name="android:lineSpacingMultiplier">0.9</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:shadowColor">@color/shadow_color</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">6</item>
+        <item name="android:shadowRadius">12</item>
     </style>
 
     <style name="tag_line_style">
-        <item name="android:textSize">
-            14sp
-        </item>
-        <item name="android:textColor">
-            @color/tag_line_color
-        </item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/tag_line_color</item>
     </style>
 
     <style name="review_style">
-        <item name="android:textSize">
-            14sp
-        </item>
-        <item name="android:textColor">
-            @color/review_color
-        </item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/review_color</item>
     </style>
 
     <style name="story_line_cast_style">
-        <item name="android:textSize">
-            14sp
-        </item>
-        <item name="android:textColor">
-            @color/story_line_color
-        </item>
-        <item name="android:shadowColor">
-            @color/shadow_color
-        </item>
-        <item name="android:shadowDx">
-            0
-        </item>
-        <item name="android:shadowDy">
-            6
-        </item>
-        <item name="android:shadowRadius">
-            12
-        </item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/story_line_color</item>
+        <item name="android:shadowColor">@color/shadow_color</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">6</item>
+        <item name="android:shadowRadius">12</item>
     </style>
 
     <style name="story_line_details_style">
-        <item name="android:textSize">
-            14sp
-        </item>
-        <item name="android:textColor">
-            @color/white
-        </item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="artist_style">
-        <item name="android:textSize">
-            12sp
-        </item>
-        <item name="android:textColor">
-            @color/artist_color
-        </item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/artist_color</item>
+    </style>
+
+    <style name="shape_image_artist" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">4dp</item>
     </style>
 </resources>
