--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="@dimen/artist_image"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_artist"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/artist_image"
+        android:layout_height="@dimen/artist_image"
         android:scaleType="centerCrop"
         android:src="@drawable/mark_ruffalo"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearance="@style/shape_image_artist" />
 
     <TextView
         android:id="@+id/tv_artist_info"
         style="@style/artist_style"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:fontFamily="sans-serif-black"
-        android:text="@string/mark_ruffalo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_artist"/>
+        android:text="@string/mark_ruffalo" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
