--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="story_line_color">#ECECEC</color>
     <color name="shadow_color">#80000000</color>
     <color name="artist_color">#D8D8D8</color>
+    <color name="background">#191926</color>
 </resources>
