Adding new colors, strings, styles.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="name_style">
+    <style name="name_details_style">
         <item name="android:textSize">40sp</item>
         <item name="android:letterSpacing">-0.01</item>
         <item name="android:lineSpacingMultiplier">0.9</item>
@@ -22,13 +22,34 @@
         <item name="android:shadowRadius">12</item>
     </style>
 
-    <style name="tag_line_style">
+    <style name="name_item_style">
         <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">-0.01</item>
+        <item name="android:lineSpacingMultiplier">0.9</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:shadowColor">@color/shadow_color</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">6</item>
+        <item name="android:shadowRadius">12</item>
+    </style>
+
+    <style name="tag_line_style_details">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/tag_line_color</item>
+    </style>
+
+    <style name="tag_line_style_item">
+        <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/tag_line_color</item>
     </style>
 
     <style name="review_style">
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/review_color</item>
+    </style>
+
+    <style name="review_item_style">
+        <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/review_color</item>
     </style>
 
@@ -41,7 +62,7 @@
         <item name="android:shadowRadius">12</item>
     </style>
 
-    <style name="story_line_details_style">
+    <style name="white_14sp">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
@@ -51,14 +72,35 @@
         <item name="android:textColor">@color/artist_color</item>
     </style>
 
+    <style name="min_style">
+        <item name="android:textSize">8sp</item>
+        <item name="android:textColor">@color/min_color</item>
+    </style>
+
     <style name="shape_image_artist" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">4dp</item>
     </style>
 
-    <style name="custom_rating_bar_style" parent="Widget.AppCompat.RatingBar.Small">
-        <item name="android:progressDrawable">@drawable/custom_rating_bar</item>
+    <style name="shape_image_movie" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">6dp</item>
+    </style>
+
+    <style name="like_check_box_style" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/like_filled_color</item>
+    </style>
+
+    <style name="rating_bar_details_style" parent="Widget.AppCompat.RatingBar.Small">
+        <item name="android:progressDrawable">@drawable/rating_bar_details</item>
         <item name="android:minHeight">12dp</item>
         <item name="android:maxHeight">12dp</item>
+    </style>
+
+    <style name="rating_bar_item_style" parent="Widget.AppCompat.RatingBar.Small">
+        <item name="android:progressDrawable">@drawable/rating_bar_item</item>
+        <item name="android:minHeight">8dp</item>
+        <item name="android:maxHeight">8dp</item>
     </style>
 </resources>
