--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="shadow_color">#80000000</color>
     <color name="artist_color">#D8D8D8</color>
     <color name="background">#191926</color>
+    <color name="min_color">#565665</color>
+    <color name="like_filled_color">#FF3365</color>
 </resources>
