Changing the layout of the item for correct display in the recyclerView.

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,23 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="170dp"
-    android:layout_height="296dp"
-    android:background="@drawable/ic_bg_item_movie">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="12dp">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_margin_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="2dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_margin_end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="2dp" />
+    <ImageView
+        android:id="@+id/iv_bg"
+        android:layout_width="170dp"
+        android:layout_height="296dp"
+        android:src="@drawable/ic_bg_item_movie"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_margin_top"
@@ -38,11 +34,11 @@
         android:id="@+id/iv_movie_poster"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
-        app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
-        app:layout_constraintTop_toTopOf="@id/guideline_margin_top"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="3dp"
+        app:layout_constraintLeft_toLeftOf="@id/iv_bg"
+        app:layout_constraintRight_toRightOf="@id/iv_bg"
+        app:layout_constraintTop_toBottomOf="@id/guideline_margin_top"
         app:layout_constraintBottom_toTopOf="@id/guideline_margin_bottom"
         app:shapeAppearance="@drawable/item_poster_avengers"
         tools:src="@drawable/item_poster_avengers" />
@@ -53,8 +49,8 @@
         android:layout_height="0dp"
         android:src="@drawable/ic_mask_item_movie"
         app:layout_constraintBottom_toBottomOf="@id/iv_movie_poster"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/iv_bg"
+        app:layout_constraintRight_toRightOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="@id/iv_movie_poster" />
 
     <CheckBox
@@ -66,8 +62,8 @@
         android:layout_marginEnd="6dp"
         android:button="@drawable/like_selector"
         android:checked="false"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="@id/iv_bg"
+        app:layout_constraintTop_toTopOf="@id/iv_bg" />
 
     <TextView
         android:id="@+id/tv_item_pg"
@@ -79,8 +75,8 @@
         android:background="@drawable/ic_rectangle"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/iv_bg"
+        app:layout_constraintTop_toTopOf="@id/iv_bg"
         tools:text="@string/pg_text" />
 
     <TextView
@@ -92,7 +88,7 @@
         android:layout_marginBottom="22dp"
         android:fontFamily="sans-serif-thin"
         app:layout_constraintBottom_toBottomOf="@id/iv_movie_poster"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/iv_bg"
         tools:text="@string/tag_line_text" />
 
     <ru.androidacademy.gooseeye.RatingBarSvg
@@ -124,10 +120,10 @@
         style="@style/name_item_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-black"
         app:layout_constraintLeft_toLeftOf="@id/tv_item_tag"
-        app:layout_constraintTop_toBottomOf="@id/iv_movie_poster"
+        app:layout_constraintBottom_toTopOf="@id/tv_min"
         tools:text="@string/item_name_avengers" />
 
     <TextView
@@ -136,8 +132,9 @@
         android:fontFamily="sans-serif-black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         app:layout_constraintLeft_toLeftOf="@id/tv_movie_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_movie_name"
+        app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         tools:text="@string/item_min_avengers" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
