--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".MovieDetailsActivity"
-    android:fitsSystemWindows="false">
+    android:fitsSystemWindows="false"
+    tools:context=".MovieDetailsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -29,13 +29,12 @@
 
         <ImageView
             android:id="@+id/img_poster"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:adjustViewBounds="true"
+            android:layout_width="0dp"
+            android:layout_height="298dp"
             android:scaleType="centerCrop"
             android:src="@drawable/poster"
+            app:layout_constraintDimensionRatio="@string/dimension_ratio_poster"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -69,15 +68,13 @@
             style="@style/pg_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="222dp"
             android:layout_marginBottom="52dp"
             android:background="@drawable/ic_rectangle"
             android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="@string/pg_text"
             app:layout_constraintBottom_toBottomOf="@id/img_poster"
-            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
-            app:layout_constraintTop_toTopOf="@id/img_poster" />
+            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start" />
 
 
         <TextView
@@ -107,13 +104,13 @@
             style="@style/rating_bar_details_style"
             android:layout_width="wrap_content"
             android:layout_height="14dp"
+            android:layout_marginTop="7dp"
             android:numStars="5"
             android:progressDrawable="@drawable/rating_bar_details"
             android:rating="4"
             android:stepSize="0.01"
-            android:layout_marginTop="7dp"
             app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
-            app:layout_constraintTop_toBottomOf="@id/tv_tag_line"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />
 
 
         <TextView
@@ -173,11 +170,11 @@
             android:id="@+id/rv_artist_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:scrollbars="none"
             app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
             app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
-            app:layout_constraintTop_toBottomOf="@id/tv_cast"
-            android:orientation="horizontal"
-            android:scrollbars="none"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_cast" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
