--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    tools:context=".MovieDetailsActivity"
-    android:fitsSystemWindows="false">
+    android:background="@color/background_color"
+    android:fitsSystemWindows="false"
+    tools:context=".MovieDetailsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -107,13 +107,13 @@
             style="@style/rating_bar_details_style"
             android:layout_width="wrap_content"
             android:layout_height="14dp"
+            android:layout_marginTop="7dp"
             android:numStars="5"
             android:progressDrawable="@drawable/rating_bar_details"
             android:rating="4"
             android:stepSize="0.01"
-            android:layout_marginTop="7dp"
             app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
-            app:layout_constraintTop_toBottomOf="@id/tv_tag_line"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />
 
 
         <TextView
@@ -173,11 +173,11 @@
             android:id="@+id/rv_artist_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:scrollbars="none"
             app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
             app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
-            app:layout_constraintTop_toBottomOf="@id/tv_cast"
-            android:orientation="horizontal"
-            android:scrollbars="none"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_cast" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
