--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -10,9 +10,9 @@
         style="@style/white_14sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="56dp"
-        android:drawablePadding="8dp"
+        android:layout_marginStart="@dimen/dimen_4x"
+        android:layout_marginTop="@dimen/dimen_14x"
+        android:drawablePadding="@dimen/dimen_2x"
         android:fontFamily="sans-serif-black"
         android:text="@string/movies_list"
         app:drawableLeftCompat="@drawable/ic_combined_shape"
@@ -24,10 +24,10 @@
         android:id="@+id/rv_movies_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="@dimen/dimen_3x"
+        android:layout_marginTop="@dimen/dimen_8x"
+        android:layout_marginEnd="@dimen/dimen_3x"
+        android:layout_marginBottom="@dimen/dimen_3x"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
