--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/artist_image"
+    android:layout_width="@dimen/dimen_item_actor_image"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_artist"
-        android:layout_width="@dimen/artist_image"
-        android:layout_height="@dimen/artist_image"
+        android:layout_width="@dimen/dimen_item_actor_image"
+        android:layout_height="@dimen/dimen_item_actor_image"
         android:scaleType="centerCrop"
-        android:src="@drawable/mark_ruffalo"
+        tools:src="@drawable/mark_ruffalo"
         app:shapeAppearance="@style/shape_image_artist" />
 
     <TextView
@@ -19,8 +20,8 @@
         style="@style/artist_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="@dimen/dimen_2x"
         android:fontFamily="sans-serif-black"
-        android:text="@string/mark_ruffalo" />
+        tools:text="@string/mark_ruffalo" />
 
 </LinearLayout>
