--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,45 +2,45 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="12dp">
+    android:layout_width="@dimen/dimen_item_movie_width"
+    android:layout_height="@dimen/dimen_item_movie_height"
+    android:layout_marginBottom="@dimen/dimen_3x">
 
     <ImageView
         android:id="@+id/iv_bg"
-        android:layout_width="170dp"
-        android:layout_height="296dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/ic_bg_item_movie"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_margin_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="2dp" />
+        app:layout_constraintGuide_begin="@dimen/dimen_1x" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_margin_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="48dp" />
+        app:layout_constraintGuide_end="@dimen/dimen_12x" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_movie_poster"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginStart="@dimen/dimen_0.5x"
+        android:layout_marginEnd="@dimen/dimen_0.5x"
+        app:layout_constraintBottom_toTopOf="@id/guideline_margin_bottom"
         app:layout_constraintLeft_toLeftOf="@id/iv_bg"
         app:layout_constraintRight_toRightOf="@id/iv_bg"
         app:layout_constraintTop_toBottomOf="@id/guideline_margin_top"
-        app:layout_constraintBottom_toTopOf="@id/guideline_margin_bottom"
-        app:shapeAppearance="@drawable/item_poster_avengers"
+        app:shapeAppearanceOverlay="@style/item_movie_poster_style"
         tools:src="@drawable/item_poster_avengers" />
 
     <ImageView
@@ -55,13 +55,13 @@
 
     <CheckBox
         android:id="@+id/cb_like"
-        android:theme="@style/like_check_box_style"
-        android:layout_width="16dp"
-        android:layout_height="14dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="6dp"
+        android:layout_width="@dimen/dimen_item_movie_check_box_width"
+        android:layout_height="@dimen/dimen_item_movie_check_box_height"
+        android:layout_marginTop="@dimen/dimen_3x"
+        android:layout_marginEnd="@dimen/dimen_2x"
         android:button="@drawable/like_selector"
         android:checked="false"
+        android:theme="@style/like_check_box_style"
         app:layout_constraintRight_toRightOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="@id/iv_bg" />
 
@@ -70,8 +70,8 @@
         style="@style/pg_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/dimen_2x"
+        android:layout_marginTop="@dimen/dimen_2x"
         android:background="@drawable/ic_rectangle"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
@@ -82,11 +82,14 @@
     <TextView
         android:id="@+id/tv_item_tag"
         style="@style/tag_line_style_item"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginStart="@dimen/dimen_2x"
+        android:layout_marginEnd="@dimen/dimen_2x"
+        android:layout_marginBottom="@dimen/dimen_5x"
+        android:ellipsize="end"
         android:fontFamily="sans-serif-thin"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/iv_movie_poster"
         app:layout_constraintLeft_toLeftOf="@id/iv_bg"
         tools:text="@string/tag_line_text" />
@@ -96,7 +99,7 @@
         style="@style/rating_bar_item_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="@dimen/dimen_1x"
         android:numStars="5"
         android:stepSize="0.01"
         app:layout_constraintLeft_toLeftOf="@id/tv_item_tag"
@@ -108,8 +111,8 @@
         style="@style/review_item_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginStart="@dimen/dimen_1x"
+        android:layout_marginTop="@dimen/dimen_0.5x"
         android:fontFamily="sans-serif-black"
         app:layout_constraintLeft_toRightOf="@id/rb_item"
         app:layout_constraintTop_toBottomOf="@id/tv_item_tag"
@@ -118,23 +121,28 @@
     <TextView
         android:id="@+id/tv_movie_name"
         style="@style/name_item_style"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/dimen_2x"
+        android:layout_marginTop="@dimen/dimen_2x"
+        android:layout_marginEnd="@dimen/dimen_2x"
+        android:ellipsize="end"
         android:fontFamily="sans-serif-black"
-        app:layout_constraintLeft_toLeftOf="@id/tv_item_tag"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@id/tv_min"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         tools:text="@string/item_name_avengers" />
 
     <TextView
         android:id="@+id/tv_min"
         style="@style/min_style"
-        android:fontFamily="sans-serif-black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintLeft_toLeftOf="@id/tv_movie_name"
+        android:layout_marginBottom="@dimen/dimen_2x"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
-        tools:text="@string/item_min_avengers" />
+        app:layout_constraintLeft_toLeftOf="@id/tv_movie_name"
+        tools:text="@string/item_min" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
