--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="artist_image">80dp</dimen>
+    <dimen name="dimen_0.5x">2dp</dimen>
+    <dimen name="dimen_1x">4dp</dimen>
+    <dimen name="dimen_2x">8dp</dimen>
+    <dimen name="dimen_3x">12dp</dimen>
+    <dimen name="dimen_4x">16dp</dimen>
+    <dimen name="dimen_5x">20dp</dimen>
+    <dimen name="dimen_6x">24dp</dimen>
+    <dimen name="dimen_8x">32dp</dimen>
+    <dimen name="dimen_10x">40dp</dimen>
+    <dimen name="dimen_12x">48dp</dimen>
+    <dimen name="dimen_13x">52dp</dimen>
+    <dimen name="dimen_14x">56dp</dimen>
+    <dimen name="dimen_poster_details_height">298dp</dimen>
+    <dimen name="dimen_item_actor_image">80dp</dimen>
+    <dimen name="dimen_item_movie_width">170dp</dimen>
+    <dimen name="dimen_item_movie_height">296dp</dimen>
+    <dimen name="dimen_item_movie_check_box_width">16dp</dimen>
+    <dimen name="dimen_item_movie_check_box_height">14dp</dimen>
 </resources>
