Refactor of style names according to camelCase, deleting unused styles

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="button_back_style">
+    <style name="buttonBackStyle">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="pg_style">
+    <style name="pgStyle">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="name_details_style">
+    <style name="nameDetailsStyle">
         <item name="android:textSize">40sp</item>
         <item name="android:letterSpacing">-0.01</item>
         <item name="android:lineSpacingMultiplier">0.9</item>
@@ -22,7 +22,7 @@
         <item name="android:shadowRadius">12</item>
     </style>
 
-    <style name="name_item_style">
+    <style name="nameItemStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:letterSpacing">-0.01</item>
         <item name="android:lineSpacingMultiplier">0.9</item>
@@ -33,27 +33,27 @@
         <item name="android:shadowRadius">12</item>
     </style>
 
-    <style name="tag_line_style_details">
+    <style name="tagLineDetailsStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/tag_line_color</item>
     </style>
 
-    <style name="tag_line_style_item">
+    <style name="tagLineTagStyle">
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/tag_line_color</item>
     </style>
 
-    <style name="review_style">
+    <style name="reviewDetailsStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/review_color</item>
     </style>
 
-    <style name="review_item_style">
+    <style name="reviewItemStyle">
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/review_color</item>
     </style>
 
-    <style name="story_line_cast_style">
+    <style name="storyLineCastStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/story_line_color</item>
         <item name="android:shadowColor">@color/shadow_color</item>
@@ -62,51 +62,40 @@
         <item name="android:shadowRadius">12</item>
     </style>
 
-    <style name="white_14sp">
+    <style name="whiteTextStyle14">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="artist_style">
+    <style name="actorStyle">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/artist_color</item>
     </style>
 
-    <style name="min_style">
+    <style name="minStyle">
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/min_color</item>
     </style>
 
-    <style name="shape_image_artist" parent="">
+    <style name="shapeActorPhotoStyle" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">4dp</item>
     </style>
 
-    <style name="shape_image_movie" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">6dp</item>
-    </style>
-
-    <style name="like_check_box_style" parent="Theme.AppCompat.Light">
+    <style name="likeCheckBoxStyle" parent="Theme.AppCompat.Light">
         <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/like_filled_color</item>
     </style>
 
-    <style name="rating_bar_details_style" parent="Widget.AppCompat.RatingBar.Small">
+    <style name="ratingBarDetailsStyle" parent="Widget.AppCompat.RatingBar.Small">
         <item name="android:progressDrawable">@drawable/rating_bar_details</item>
         <item name="android:minHeight">12dp</item>
         <item name="android:maxHeight">12dp</item>
     </style>
 
-    <style name="rating_bar_item_style" parent="Widget.AppCompat.RatingBar.Small">
+    <style name="ratingBarItemStyle" parent="Widget.AppCompat.RatingBar.Small">
         <item name="android:progressDrawable">@drawable/rating_bar_item</item>
         <item name="android:minHeight">8dp</item>
         <item name="android:maxHeight">8dp</item>
-    </style>
-
-    <style name="item_movie_poster_style" parent="">
-        <item name="cornerSize">8dp</item>
-        <item name="cornerFamilyTopLeft">rounded</item>
-        <item name="cornerFamilyTopRight">rounded</item>
     </style>
 </resources>
